upload de foto local

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGO_URL=mongodb://localhost:27017/testeNode
 PORT=3000
 JWTTOKEN=cc1fe304ae7a5e96c7c2b9fab7827220
+APP_URL=http://localhost:3000
+TYPE_STORAGE=local
