--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "socket.io": "^2.2.0"
+  
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
