--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,11 @@ npm-debug.log*
 .idea/
 .sourcemaps/
 .sass-cache/
-.tmp/
 .versions/
 coverage/
 dist/
 node_modules/
-tmp/
+
 temp/
 hooks/
 platforms/
@@ -36,3 +35,4 @@ UserInterfaceState.xcuserstate
 
 tmp/fotos/*
 !tmp/fotos/.gitkeep
+.env
