--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "cloudinary": "^1.14.0",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
@@ -18,8 +19,8 @@
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "socket.io": "^2.2.0"
-  
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
